<resources>
    <string name="app_name">Kalchakra</string>

    <string name="todo">TODO</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="wellcome_to_the_world">Wellcome to the world</string>
    <string name="city">city</string>
    <string name="Country">"Country "</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="life_is_full_of_surprises_live_more_remain">Life is full of surprises, Live More ____ Remain</string>
    <string name="login">LOGIN</string>
    <string name="REGISTRATION">Registration</string>
    <string name="Email">email</string>
    <string name="Send">send</string>
    <string name="its_look_that_you_mised_your_password">Its look that you mised your password</string>
    <string name="traveling">Traveling</string>
    <string name="Kalchakra">kalchakra</string>
    <string name="start_a_fresh_life">Start A Fresh Life</string>
    <string name="when_we_can_celebrate_your_birthday">When We Can Celebrate Your Birthday</string>
    <string name="calculate_your_days_on_earth">Calculate your days on earth</string>
    <string name="locationtext">Please getting Current location</string>
    <string name="Login">Login</string>
    <string name="eg_50">Eg:50</string>
    <string name="select_manually">Select Manually</string>
    <string name="select_malually">Select Malually</string>
    <string name="it_s_amazing_to_set_location_manually">it\'s amazing to set location manually</string>
    <string name="set_location_manually">Set Location Manually</string>
    <string name="text">Your Age is :</string>

    <string name="title_activity_navigation_items">Navigation_items</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>


    <string name="dashboard">Dashboard</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="messages_header">Messages</string>
    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_event">Enter the Event</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="logout">Logout</string>

    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="account_info">Account Info</string>
    <string name="delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="type_event">Type Event</string>
    <string name="_1">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="text">
        <item>You Are One Step Behind to Achieve Your Dream ,Follow Simple Step </item>

    </string-array>
</resources>

