<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:fontFamily="@font/baloo"
        android:icon="@drawable/kalchakra_foreground"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/activity"
        android:icon="@drawable/ic_menu_gallery"
        android:enabled="true"
        android:fontFamily="@font/baloo"
        android:title="@string/activity" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:fontFamily="@font/baloo"
        android:title="@string/setting" />

    <item
        android:fontFamily="@font/baloo"
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>