<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id= "@+id/spinner"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/Country"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:shadowRadius="1"
        android:textColor="#ffff" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/State"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:hint="@string/State"
        android:shadowRadius="5"
        android:textColor="#fff" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginStart="20dp"
        android:hint="@string/City"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:shadowRadius="1"
        android:textColor="#ffff" />

</LinearLayout>