<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:orientation="vertical"
    tools:context=".Profile">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/custom_button"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:theme="?attr/actionBarTheme"
            android:clickable="true"
            android:outlineSpotShadowColor="@color/design_default_color_surface"
            android:src="@drawable/back"
            android:focusable="true"
            android:contentDescription="TODO" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle"
            android:src="@drawable/profile"
            tools:ignore="ContentDescription" />

    </LinearLayout>



    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_info"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:fontFamily="@font/baloo"
        android:textSize="50sp"
        android:textFontWeight="1"
        android:fadeScrollbars="true"
        android:paddingTop="50dp"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:textFontWeight="1"
        android:fadeScrollbars="true"
        android:paddingTop="50dp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:textFontWeight="1"
        android:fadeScrollbars="true"
        android:paddingTop="50dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:textFontWeight="1"
        android:fadeScrollbars="true"
        android:paddingTop="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:shadowColor="@color/black"
        android:elevation="@dimen/google_1x"
        android:text="@string/logout"
        android:layout_marginTop="1dp"/>




</LinearLayout>
</ScrollView>