<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_password_popup"
    tools:context=".Forgot_Password">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="160dp"
        android:elevation="10dp"
        android:padding="50dp"
        android:src="@drawable/cancle"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/design_default_color_surface"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:paddingStart="10dp"
            android:fontFamily="@font/baloo"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"

             android:text="@string/its_look_that_you_mised_your_password"
             android:textSize="18sp"
             android:textStyle="bold"
            android:padding="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="25dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forget_Password_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/email"
                android:hint="@string/enter_your_email"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:focusable="true"
                android:layout_margin="20dp"
                android:shadowRadius="2"
                app:textInputLayoutFocusedRectEnabled="true"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColorHint="#fff"
                android:clickable="true"
                android:textColor="#ffff" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:elevation="20dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/Send"
                 />





        </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>